# hurtbox

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CONTRIBUTORS  COPYING  HurtBox.sln  HurtBox.vcxproj  HurtBox.vcxproj.filters  Hurtbox.sln  Hurtbox.vcxproj  Hurtbox.vcxproj.filters  Makefile.am  README  README.md  TODO  autogen.sh  build.bat  build.sh  configure.ac  packages.config
.githooks/: pre-commit
contrib/: CMakeLists.txt  Makefile.am
contrib/SDL2-2.0.4/VisualC/SDL/: SDL.vcxproj
contrib/SDL2-2.0.4/VisualC/SDLmain/: SDLmain.vcxproj
contrib/SDL2-2.0.4/VisualC/SDLtest/: SDLtest.vcxproj
contrib/SDL2-2.0.4/VisualC/tests/controllermap/: controllermap.vcxproj
contrib/gl-matrix-c/: CMakeLists.txt  Makefile.am  mat3.c
contrib/gl-matrix-stack/: gl-matrix-stack.h
contrib/gl-matrix.c/: gl-matrix.h  mat4.c  quat.c  vec3.c
contrib/gl3w-Single-File/: CMakeLists.txt
contrib/nuklear/: CMakeLists.txt  nuklear_sdl_gl3.h
contrib/stb/: CMakeLists.txt
doc/: Makefile.am  fighting.man  hurtbox.man
models/: sphere.dae  walls.dae
shaders/: CMakeLists.txt  walls.frag  walls.vert
src/: CMakeLists.txt  Makefile.am  common.h  controller.c  controller.h  gamecontrollerdb.txt  hb-imgui.cpp  hb-imgui.h  imgui_impl_sdl_gl3.cpp  intro-scene.c  intro-scene.h  load_asset.c  load_asset.h  main.c  main.cpp  main.h  mainscene.c  mainscene.h  shader.c  shader.h
